# smart-stick

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md
docs/: data-schema.md  requirements.md  specs.md
mock/: __init__.py  fake_sensors.py  mock_container.py  requirements.txt  run.py
rpi/: .env.example  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
rpi/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  schemas.py
rpi/core/: __init__.py  config.py  constants.py  exceptions.py  types.py
rpi/data/: smartstick.db
rpi/detection/: __init__.py  alert_engine.py  detector.py  distance_fusion.py  frame_buffer.py  patterns.py  rate_limiter.py  tones.py  yolo_model.py
rpi/output/: __init__.py  buzzer.py  haptics.py  output_queue.py  speaker.py
rpi/sensors/: __init__.py  base.py  battery.py  camera.py  esp32_bridge.py  gps.py  imu.py  lidar.py  ultrasonic.py
rpi/services/: __init__.py  battery_service.py  detection_service.py  location_service.py  logger_service.py  message_service.py  output_service.py  session_service.py
rpi/storage/: __init__.py  database.py  migrations.py  models.py  repositories.py  schema.py
rpi/systemd/: smartstick.service
rpi/tests/: conftest.py  test_api.py  test_detection.py  test_output.py  test_sensors.py  test_services.py  test_storage.py  test_utils.py
rpi/utils/: __init__.py  converters.py  decorators.py  geometry.py  logger.py  validators.py
smart-stick-mobile/: README.md  app.json  package-lock.json  package.json
smart-stick-mobile/app/: _layout.tsx
(+16 files in other folders)
