[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-stick-rpi"
version = "1.1.0"
description = "FastAPI backend for the Smart Stick BVI device (Raspberry Pi 5)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Smart Stick Team" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses `Depends(...)` as a default argument by design.
"**/api/routes.py" = ["B008"]
# Optional overrides in the sensor base class — not abstract on purpose.
"**/sensors/base.py" = ["B027"]
